--- a/sass/studio/_hero.scss
+++ b/sass/studio/_hero.scss
@@ -19,7 +19,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(/images/Header.mobile.jpg);
+      url(../images/Header.mobile.jpg);
 
     background-size: cover;
     background-repeat: no-repeat;
@@ -35,7 +35,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(/images/Header.tablet.jpg);
+      url(../images/Header.tablet.jpg);
 
     background-size: cover;
     background-repeat: no-repeat;
