--- a/css/main.css
+++ b/css/main.css
@@ -315,48 +315,58 @@ body {
 }
 
 .hero__container {
-  margin-right: auto;
   margin-left: auto;
+  margin-right: auto;
+  max-width: 1600px;
+  min-height: 400px;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header.mobile.jpg);
+  background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header.mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero__container {
-    max-width: 480px;
-    min-height: 400px;
-    background-color: rgba(47, 48, 58, 0.8);
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/Header.mobile.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/Header.mobile.jpg);
-    background-size: cover;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-mob@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-mob@2x.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero__container {
-    max-width: 768px;
-    min-height: 400px;
-    background-color: rgba(47, 48, 58, 0.8);
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/Header.tablet.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/Header.tablet.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-tab.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-tab.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero__container {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-tab@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-tab@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero__container {
-    background-color: rgba(47, 48, 58, 0.8);
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/header.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/header.jpg);
-    max-height: 600px;
-    min-width: 100%;
     padding-top: 200px;
     padding-bottom: 200px;
+    min-height: 600px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-desk.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-desk.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero__container {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(/images/Header-desk@2x.jpg);
+    background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(/images/Header-desk@2x.jpg);
   }
 }
 
