--- a/sass/studio/_hero.scss
+++ b/sass/studio/_hero.scss
@@ -3,57 +3,136 @@
   max-height: 600px;
 }
 
+// .hero__container {
+//   margin-right: auto;
+//   margin-left: auto;
+//   padding-top: 118px;
+//   padding-bottom: 118px;
+//   text-align: center;
+
+//   @media screen and(min-width:320px) {
+//     max-width: 480px;
+//     min-height: 400px;
+//     background-color: rgba(47, 48, 58, 0.8);
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.4),
+//         rgba(47, 48, 58, 0.4)
+//       ),
+//       url(/images/Header.mobile.jpg);
+
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     background-position: center;
+//   }
+
+//   @media screen and(min-width:$tablet) {
+//     max-width: 768px;
+//     min-height: 400px;
+//     background-color: rgba(47, 48, 58, 0.8);
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.4),
+//         rgba(47, 48, 58, 0.4)
+//       ),
+//       url(/images/Header.tablet.jpg);
+
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     background-position: center;
+//   }
+
+//   @media screen and(min-width:$desktop) {
+//     background-color: rgba(47, 48, 58, 0.8);
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.4),
+//         rgba(47, 48, 58, 0.4)
+//       ),
+//       url(/images/header.jpg);
+//     max-height: 600px;
+//     min-width: 100%;
+//     padding-top: 200px;
+//     padding-bottom: 200px;
+//   }
+// }
+
 .hero__container {
-  margin-right: auto;
   margin-left: auto;
+  margin-right: auto;
+  max-width: 1600px;
+  min-height: 400px;
+
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
 
-  @media screen and(min-width:320px) {
-    max-width: 480px;
-    min-height: 400px;
-    background-color: rgba(47, 48, 58, 0.8);
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(/images/Header.mobile.jpg);
+  background-image: linear-gradient(
+      180deg,
+      rgba(47, 48, 58, 0.064) 0%,
+      rgba(47, 48, 58, 0) 100%
+    ),
+    url(/images/Header.mobile.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
-    background-size: cover;
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        180deg,
+        rgba(47, 48, 58, 0.064) 0%,
+        rgba(47, 48, 58, 0) 100%
+      ),
+      url(/images/Header-mob@2x.jpg);
     background-repeat: no-repeat;
     background-position: center;
-  }
-
-  @media screen and(min-width:$tablet) {
-    max-width: 768px;
-    min-height: 400px;
-    background-color: rgba(47, 48, 58, 0.8);
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(/images/Header.tablet.jpg);
-
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
-  @media screen and(min-width:$desktop) {
-    background-color: rgba(47, 48, 58, 0.8);
+  @media screen and (min-width: 768px) {
     background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
+        180deg,
+        rgba(47, 48, 58, 0.064) 0%,
+        rgba(47, 48, 58, 0) 100%
       ),
-      url(/images/header.jpg);
-    max-height: 600px;
-    min-width: 100%;
+      url(/images/Header-tab.jpg);
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          180deg,
+          rgba(47, 48, 58, 0.064) 0%,
+          rgba(47, 48, 58, 0) 100%
+        ),
+        url(/images/Header-tab@2x.jpg);
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
+    min-height: 600px;
+
+    background-image: linear-gradient(
+        180deg,
+        rgba(47, 48, 58, 0.064) 0%,
+        rgba(47, 48, 58, 0) 100%
+      ),
+      url(/images/Header-desk.jpg);
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          180deg,
+          rgba(47, 48, 58, 0.064) 0%,
+          rgba(47, 48, 58, 0) 100%
+        ),
+        url(/images/Header-desk@2x.jpg);
+    }
   }
 }
 
