--- a/css/main.css
+++ b/css/main.css
@@ -322,8 +322,8 @@ body {
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header.mobile.jpg);
-  background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header.mobile.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.064)), to(rgba(47, 48, 58, 0))), url(../images/Header-mobile.jpg);
+  background-image: linear-gradient(180deg, rgba(47, 48, 58, 0.064) 0%, rgba(47, 48, 58, 0) 100%), url(../images/Header-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
