--- a/sass/studio/_hero.scss
+++ b/sass/studio/_hero.scss
@@ -72,7 +72,7 @@
       rgba(47, 48, 58, 0.064) 0%,
       rgba(47, 48, 58, 0) 100%
     ),
-    url(../images/Header.mobile.jpg);
+    url(../images/Header-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
